@@ -15,6 +15,7 @@ Created and maintained by Darius Babcock
 	- Added 'heydings-common-icons' font for font-based icons/symbols
 	- Tweaked compress_scripts algorithm to clean scripts better. 5% overall reduction in size
 	- Completely rewrote css buttons and added color variants
+	- Added social button options to core_buttons.php
 
 ## Version 6.8.0 ##
 	- Added a pure css menu via lib/css/core_menus.php. Also added sample template to templates and _demo.php
